fix: input right position and css align text name

--- a/src/app/stelliance-connect-widget-apps/stelliance-connect-widget-apps.component.css
+++ b/src/app/stelliance-connect-widget-apps/stelliance-connect-widget-apps.component.css
@@ -9,11 +9,12 @@
   margin: auto;
   padding: 1.25rem;
   flex-direction: column;
+  align-items: center;
 }
 
 .stelliance-tooltip-item .name-container {
   display: flex;
-  margin: auto;
+  text-align: center;
 }
 
 .stelliance-tooltip-item .name-container span {
